--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@ https://maps.app.goo.gl/y8cDpqM56Phq59Mt7"width="100%" height="100%" frameborder
                 </div>
             </div>
             <!-- End Links -->
-
+                      <script src="js/jquery-3.2.1.slim.min.js"></script> <!-- https://jquery.com/ -->
             <!-- Copyright -->
             <div class="content container">
                 <div class="row">
