--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<script src="js/jquery-3.2.1.slim.min.js"></script> <!-- http://example.com/ -->
 <html lang="en" class="no-js">
    
     <head>
