--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="masonry-grid-sizer col-xs-6 col-sm-6 col-md-1"></div>
                     <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 sm-margin-b-30">
                         <div class="margin-b-60">
-                            <h2>Contcat my staf members</h2>
+                            <h2>Contcat my staff members</h2>
                         </div>
                         <img class="full-width img-responsive wow fadeInUp" src="C:\Users\kaushal kishore\OneDrive\Documents\GitHub\kskrr3033351159.github.io\11.jpeg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                     </div>
